--- a/Modules/Intro to Categorical Model-Making Module by Austin Hayes/PLAYOFF VERSION Answer Key - Intro to Categorical Modeling Module by Austin Hayes.ipynb
+++ b/Modules/Intro to Categorical Model-Making Module by Austin Hayes/PLAYOFF VERSION Answer Key - Intro to Categorical Modeling Module by Austin Hayes.ipynb
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "229a04aa",
    "metadata": {},
    "outputs": [],
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "196fc573",
    "metadata": {},
    "outputs": [],
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "b142e48c",
    "metadata": {},
    "outputs": [],
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "12f8e83f",
    "metadata": {},
    "outputs": [],
@@ -188,7 +188,7 @@
     "training_data_19_24 = scaler.fit_transform(TRAIN_WNBA_19_24_Data[['FG', 'FGA', '3P', '3PA', '2P', '2PA', 'FT', 'FTA', 'ORB', 'DRB', 'TRB', 'AST', 'STL', 'BLK', 'TOV', 'PF', 'PTS']])\n",
     "\n",
     "# Transform (scale) the 2025 WNBA data using the same scaler\n",
-    "test_data_2025 = scaler.fit_transform(CURRENT_WNBA_2025_Data[['FG', 'FGA', '3P', '3PA', '2P', '2PA', 'FT', 'FTA', 'ORB', 'DRB', 'TRB', 'AST', 'STL', 'BLK', 'TOV', 'PF', 'PTS']])"
+    "test_data_2025 = scaler.transform(CURRENT_WNBA_2025_Data[['FG', 'FGA', '3P', '3PA', '2P', '2PA', 'FT', 'FTA', 'ORB', 'DRB', 'TRB', 'AST', 'STL', 'BLK', 'TOV', 'PF', 'PTS']])"
    ]
   },
   {
@@ -201,17 +201,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "e8794965",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1], dtype=int64)"
+       "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1], dtype=int64)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,17 +248,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "9ee975f2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0], dtype=int64)"
+       "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0, 0], dtype=int64)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "eab5342e",
    "metadata": {},
    "outputs": [
@@ -297,7 +297,7 @@
        "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0], dtype=int64)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "59cdcb8c",
    "metadata": {},
    "outputs": [
@@ -336,7 +336,7 @@
        "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1], dtype=int64)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,17 +365,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "a5cf7e08",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0, 0, 0], dtype=int64)"
+       "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0], dtype=int64)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +407,7 @@
    "id": "88e7d28c",
    "metadata": {},
    "source": [
-    "ANSWER: _There is no wrong answer for this problem. However, it seems that the most realistic results come from the Logistic model and the KNN model with K = 5._"
+    "ANSWER: _There is no wrong answer for this problem. However, it seems that the most realistic results come from the Logistic model along with the KNN models with K = 5 and K = 25. They both pick a smaller amount of teams and the teams that were picked tend to be ranked higher._"
    ]
   },
   {
