--- a/Modules/Intro to Categorical Model-Making Module by Austin Hayes/PLAYOFF VERSION of Intro to Categorical Model-Making Module by Austin Hayes.ipynb
+++ b/Modules/Intro to Categorical Model-Making Module by Austin Hayes/PLAYOFF VERSION of Intro to Categorical Model-Making Module by Austin Hayes.ipynb
@@ -10,7 +10,7 @@
     " - Worried about timeliness of predicting 2025 results mid season.  I get the desire at the moment but not sure it will age well.  Let's update the data from the 2025 reason to get the full season results. - Done\n",
     " - Need to more explicitly explain what is happening with scaling and why we are doing it.  Also, we use fit_transform() on training data and tranform() on test data.  Here's why\n",
     "[< https://towardsdatascience.com/what-and-why-behind-fit-transform-vs-transform-in-scikit-learn-78f915cf96fe/>] - Done. \n",
-    " - Maybe go through the 19-23 train with 24 test as an example then have 19-24 train and 25 test as an exercise.\n",
+    " - Maybe go through the 19-23 train with 24 test as an example then have 19-24 train and 25 test as an exercise.  -Done. Answer key has been updated accordingly.\n",
     " - Need to have some explanation of the statistics.  What is a field goal?  What is a two-point versus a three-point field goal?  (All field goals in football are 3 points)  What is a rebound?  An assist? etc. - Done.\n",
     " - When you do 'log_predictions' explain what a zero represents and what a one represents. I would also rename that variable 'logit_predictions' to make it clearer - Done.\n",
     " - logistic regression assumes a linear relationship among the log-odds of the response and the predictors - Done.\n",
@@ -2059,7 +2059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "id": "35bea089",
    "metadata": {},
    "outputs": [
@@ -2072,6 +2072,7 @@
     }
    ],
    "source": [
+    "# Get Accuracy Score\n",
     "accuracy_score_qda = accuracy_score(TEST_WNBA_2024_Data['PLAYOFFS'], qda_predictions)\n",
     "\n",
     "# Print the accuracy score\n",
@@ -2091,7 +2092,7 @@
    "id": "d0a1e82a",
    "metadata": {},
    "source": [
-    "As you could have guessed, there is an astonishingly low accuracy score in comparison to the prior models. There might be a massive colinearity issue with using this model. It may be best to skip the use of this model.\n",
+    "As you could have guessed, that is a low accuracy score in comparison to the prior models. There might be a colinearity issue with using this model. It may be best to skip the use of this model.\n",
     "\n",
     "Let's move onto KNN!"
    ]
@@ -2622,7 +2623,7 @@
    "id": "df5dded5",
    "metadata": {},
    "source": [
-    "Interesting! It predicted one to many teams to make the playoffs. However, this model has the same accuracy score as the logistic model. Now, let's do the same thing with a higher number of neigbors! Let's try a higher K of 51!"
+    "Interesting! It predicted one too many teams to make the playoffs. However, this model has the same accuracy score as the logistic and LDA model's. Now, let's do the same thing with a higher number of neighbors. Let's try a higher K of 51."
    ]
   },
   {
@@ -3109,7 +3110,7 @@
    "id": "64769da7",
    "metadata": {},
    "source": [
-    "The KNN model with 51 neighbors has a 66.7% accuracy for predicting the teams who made the WNBA playoffs during the 2024 season."
+    "The KNN model with 51 neighbors has a 66.7% accuracy for predicting the teams who made the WNBA playoffs during the 2024 season. Like the QDA model, this has model has produced a lower accuracy score with every team predicted to make the playoffs. Let's avoid use of this model."
    ]
   },
   {
@@ -3117,7 +3118,7 @@
    "id": "23321b05",
    "metadata": {},
    "source": [
-    "Not great! The model used too many points and predicted every team to make the playoffs. Now let's try K = 15"
+    "Now let's try K = 15"
    ]
   },
   {
@@ -3612,9 +3613,9 @@
    "id": "e863a6af",
    "metadata": {},
    "source": [
-    "This model predicted 9 teams to make the playoffs; one too many. Not a great accuracy score either. \n",
+    "This model has the same issue as the model with K=51. We should also avoid using this model any further.\n",
     "\n",
-    "Now, let's try k=13 and k=21 now!"
+    "Now, let's try k=13 and k=21 now."
    ]
   },
   {
@@ -3683,7 +3684,7 @@
    "id": "f4ac71ae",
    "metadata": {},
    "source": [
-    "The KNN model with 13 neighbors has a 75% accuracy for predicting the teams who made the WNBA playoffs during the 2024 season."
+    "The KNN model with 13 neighbors has a 75% accuracy for predicting the teams who made the WNBA playoffs during the 2024 season. The results seem to be middle of the road in comparison to the other models we have made. Let's try K=21 instead."
    ]
   },
   {
@@ -3752,7 +3753,9 @@
    "id": "a58092a5",
    "metadata": {},
    "source": [
-    "The KNN model with 21 neighbors has a 75% accuracy for predicting the teams who made the WNBA playoffs during the 2024 season."
+    "The KNN model with 21 neighbors has a 75% accuracy for predicting the teams who made the WNBA playoffs during the 2024 season.\n",
+    "\n",
+    "This accuracy score is the same as the KNN model with K=13. Very interesting since K=15 is between both K=13 and K=21 but had worse accuracy then either of them."
    ]
   },
   {
@@ -3760,9 +3763,9 @@
    "id": "a4e0d6a9",
    "metadata": {},
    "source": [
-    "Although our models have not produced the most ideal results, this is a part of the modeling experience. You learn what works and what does'nt.\n",
+    "Although our models have not produced the most ideal results, this is a part of the modeling experience.\n",
     "\n",
-    "Since we have a tie for the highest accuracy between the Logistic model and the KNN Model with K=5, let's have both of them make a prediction on the 2025 season data. In a few of the excercises below, you will retrain these models with the 2019-2024 dataset and have them predict which teams will get in to the 2025 WNBA playoffs."
+    "In a few of the excercises below, you will retrain these models with the 2019-2024 dataset and have them predict which teams will get in to the 2025 WNBA playoffs."
    ]
   },
   {
@@ -3777,7 +3780,7 @@
     "\n",
     "Throughout this module, we have seen a lot of things. We have gone over the basics of modeling with KNN, LDA, QDA and Logistic models. We have discussed scaling, accuracy scores, tie-breakers, etc. There is a LOT that comes with the modeling process. There are also lots of other types of models that could have been used to find this outcome such as SVM's, Decision Trees, etc. There are plenty of other alternatives that could be used in place of the models we have learned about today. \n",
     "\n",
-    "We learned that Discriminant Analysis was NOT a good idea for this dataset and that logistic models, along with KNN models, fit this project much better. This may be due to the scaling along with the variances/relationships among the predictor variables. Exploratory analysis and data validation is extremely important in the model-making process. Preparing the data for usage and discovering what works and what does'nt is a vital piece of the puzzle, as we figured out today."
+    "We learned that Quadratic Discriminant Analysis was not a good fit for this dataset and that logistic models, along with certain KNN models, work much better with this project. This may be due to the scaling along with the variances/relationships among the predictor variables. Exploratory analysis and data validation is extremely important in the model-making process. Preparing the data for usage and discovering what works and what does'nt is a vital piece of the puzzle, as we figured out today."
    ]
   },
   {
